crates/core/tests/proc/ty/empty_unit.stderr
error: Empty structs are not allowed unless marked as #[ffi_type(opaque)] or #[ffi_type(service)].
 --> tests/proc/ty/empty_unit.rs:4:8
  |
4 | struct Foo;
  |        ^^^
